--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Photo Gallery</title>
+    <title>SnapView</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
